# protocol

./: .gitignore  BURST_WHITEPAPER.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.ci  IMPLEMENTATION_DECISIONS.md  IMPLEMENTATION_DECISIONS.md.pre-reorg  LICENSE  README.md  docker-compose.yml  install.ps1  install.sh  testnet.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
brn/: Cargo.toml
brn/benches/: brn_bench.rs
brn/src/: engine.rs  error.rs  lib.rs  stake.rs  state.rs
brn/tests/: prop_tests.rs
consensus/: Cargo.toml
consensus/src/: active_elections.rs  backlog_scanner.rs  conflict.rs  election.rs  equivocation.rs  error.rs  fork_cache.rs  lib.rs  online_weight.rs  rep_crawler.rs  rep_weights.rs  representative.rs  request_aggregator.rs  scheduler.rs  vote_by_hash.rs  vote_cache.rs  vote_generator.rs  vote_info.rs  vote_rebroadcast.rs  vote_solicitor.rs  vote_spacing.rs  voting.rs
consti/: Cargo.toml
consti/src/: amendment.rs  document.rs  engine.rs  error.rs  lib.rs
contrib/: burst-node.service
crypto/: Cargo.toml
crypto/benches/: crypto_bench.rs
crypto/src/: address.rs  encryption.rs  hash.rs  keys.rs  lib.rs  mnemonic.rs  sign.rs
daemon/: Cargo.toml
daemon/src/: main.rs
deploy/: TESTNET_SETUP.md  deploy-testnet.sh  health-check.sh  setup-node.sh  testnet-nodes.txt  update-testnet.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_block_deserialize.rs  fuzz_brn_computation.rs  fuzz_codec_decode.rs  fuzz_message_parse.rs  fuzz_pow_validate.rs
governance/: Cargo.toml
governance/src/: delegation.rs  engine.rs  error.rs  lib.rs  params.rs  proposal.rs
groups/: Cargo.toml
groups/src/: client.rs  error.rs  lib.rs  registry.rs  types.rs
ledger/: Cargo.toml
ledger/src/: account_chain.rs  error.rs  frontier.rs  genesis.rs  ledger.rs  lib.rs  pruning.rs  snapshot.rs  state_block.rs
messages/: Cargo.toml
messages/src/: lib.rs
network/: Cargo.toml
network/src/: auth.rs  broadcast.rs  clock_sync.rs  connection.rs  dedup.rs  error.rs  lib.rs  peer_manager.rs  syn_cookies.rs  sync.rs  throttle.rs  upnp.rs
node/: Cargo.toml
node/src/: block_processor.rs  bootstrap.rs  bounded_backlog.rs  config.rs  confirmation_processor.rs  confirming_set.rs  connection_registry.rs  error.rs  ledger_bridge.rs  ledger_cache.rs  ledger_event.rs  ledger_updater.rs  lib.rs  limits.rs  local_broadcaster.rs  logging.rs  metrics.rs  node.rs  online_weight.rs  parallel_processor.rs  peer_connector.rs  priority_queue.rs  recently_confirmed.rs  shutdown.rs  tracing_spans.rs  unchecked.rs  verification_processor.rs  wire_message.rs
node/tests/: fuzz_serialization.rs  integration_tests.rs
nullables/: Cargo.toml
nullables/src/: clock.rs  lib.rs  network.rs  random.rs  store.rs
protocol/: Cargo.toml
protocol/src/: codec.rs  error.rs  handshake.rs  lib.rs  version.rs
questionnaire/: index.html  reorganize.py  server.py
rpc/: Cargo.toml
rpc/src/: error.rs  handlers.rs  lib.rs  pagination.rs  server.rs
store/: Cargo.toml
store/src/: account.rs  block.rs  brn.rs  delegation.rs  error.rs  frontier.rs  governance.rs  lib.rs  merger_graph.rs  meta.rs  peer.rs  pending.rs  rep_weights.rs  transaction.rs  trst_index.rs  verification.rs
store_lmdb/: Cargo.toml
store_lmdb/src/: account.rs  block.rs  brn.rs  environment.rs  error.rs  frontier.rs  governance.rs  integrity.rs  lib.rs  merger_graph.rs  meta.rs  migration.rs  peer.rs  pending.rs  rep_weights.rs  transaction.rs  trst_index.rs  verification.rs  write_batch.rs
transactions/: Cargo.toml
transactions/src/: burn.rs  challenge.rs  delegate.rs  endorse.rs  error.rs  governance.rs  lib.rs  merge.rs  receive.rs  reject_receive.rs  representative.rs  send.rs  split.rs  validation.rs  verification_vote.rs
trst/: Cargo.toml
trst/src/: engine.rs  error.rs  lib.rs  merger_graph.rs  token.rs
types/: Cargo.toml
types/src/: address.rs  amount.rs  block.rs  error.rs  hash.rs  keys.rs  lib.rs  network.rs  params.rs  state.rs  time.rs
types/tests/: prop_tests.rs
utils/: Cargo.toml
utils/src/: lib.rs  logging.rs  stats.rs  time.rs
verification/: Cargo.toml
verification/src/: challenge.rs  endorsement.rs  error.rs  lib.rs  method.rs  orchestrator.rs  outcomes.rs  state.rs  verifier_selection.rs  voting.rs
vrf/: Cargo.toml
vrf/src/: commit_reveal.rs  drand.rs  error.rs  lib.rs  threshold.rs
wallet_core/: Cargo.toml
wallet_core/src/: auto_merge.rs  balance.rs  custodianship.rs  delegation.rs  error.rs  keys.rs  keystore.rs  lib.rs  portfolio.rs  transaction_builder.rs  trust_policy.rs  wallet.rs
websocket/: Cargo.toml
websocket/src/: lib.rs  server.rs  subscriptions.rs
work/: Cargo.toml
work/benches/: work_bench.rs
work/src/: difficulty.rs  error.rs  generator.rs  lib.rs  precompute.rs  thresholds.rs  validator.rs
work/tests/: prop_tests.rs
