[workspace]
resolver = "2"
members = [
    "types",
    "crypto",
    "utils",
    "brn",
    "trst",
    "transactions",
    "store",
    "store_lmdb",
    "ledger",
    "verification",
    "vrf",
    "consensus",
    "work",
    "governance",
    "consti",
    "messages",
    "protocol",
    "network",
    "node",
    "daemon",
    "rpc",
    "websocket",
    "wallet_core",
    "groups",
    "nullables",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/BURST-UBI/burst-protocol"
authors = ["Nitesh Gautam"]

[workspace.dependencies]
# Foundation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
toml = "1.0"
hex = "0.4"

# Crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
blake2 = "0.10"
rand = "0.8"
getrandom = "0.2"
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
bip39 = "2"
argon2 = "0.5"
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
blst = "0.3"

# Storage
heed = "0.20"
bincode = "1"

# Networking
igd-next = { version = "0.15", features = ["aio_tokio"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
prost = "0.13"

# Metrics
prometheus = "0.13"

# Parallelism
rayon = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"

# Internal crates
burst-types = { path = "types" }
burst-crypto = { path = "crypto" }
burst-utils = { path = "utils" }
burst-brn = { path = "brn" }
burst-trst = { path = "trst" }
burst-transactions = { path = "transactions" }
burst-store = { path = "store" }
burst-store-lmdb = { path = "store_lmdb" }
burst-ledger = { path = "ledger" }
burst-verification = { path = "verification" }
burst-vrf = { path = "vrf" }
burst-consensus = { path = "consensus" }
burst-work = { path = "work" }
burst-governance = { path = "governance" }
burst-consti = { path = "consti" }
burst-messages = { path = "messages" }
burst-protocol = { path = "protocol" }
burst-network = { path = "network" }
burst-node = { path = "node" }
burst-rpc = { path = "rpc" }
burst-websocket = { path = "websocket" }
burst-wallet-core = { path = "wallet_core" }
burst-groups = { path = "groups" }
burst-nullables = { path = "nullables" }
