[package]
name = "burst-brn"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BRN computation engine — accrual, burning, staking, rate-change splitting"

[dependencies]
burst-types = { workspace = true }
burst-crypto = { workspace = true }
burst-store = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "brn_bench"
harness = false
