[package]
name = "burst-consti"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The Consti — BURST's on-chain constitution (decentralized self-amending)"

[dependencies]
burst-types = { workspace = true }
burst-governance = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
