[package]
name = "burst-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for the BURST protocol (Ed25519, Blake2b)"

[dependencies]
burst-types = { workspace = true }
ed25519-dalek = { workspace = true }
blake2 = { workspace = true }
rand = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bip39 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false
