[package]
name = "burst-messages"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Network message types for node-to-node communication"

[dependencies]
burst-types = { workspace = true }
burst-transactions = { workspace = true }
serde = { workspace = true }
