[package]
name = "burst-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire protocol — message encoding/decoding, handshake, versioning"

[dependencies]
burst-types = { workspace = true }
burst-messages = { workspace = true }
burst-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }