[package]
name = "burst-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fundamental types for the BURST protocol"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
blake2 = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
