[package]
name = "burst-websocket"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket server for real-time updates (confirmations, account changes)"

[dependencies]
burst-types = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }