[package]
name = "burst-work"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Anti-spam proof-of-work generation and validation"

[dependencies]
burst-types = { workspace = true }
burst-crypto = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "work_bench"
harness = false
